Trying to fix the footer from clipping into the body

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -12,14 +12,23 @@
 }
 
 /* ====================
-    Base Styles
+    Element Styles
 ==================== */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    margin: 0px;
+    padding-left: 10%;
+    background-color: var(--background);
+}
+
 body {
     background-color: #043146;
     font-family: 'Open Sans', Arial, sans-serif;
     color: var(--text-light);
     margin: 0;
-    margin-bottom: 10px;
     padding: 0;
 }
 
@@ -29,6 +38,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    margin-top: 100px;
     padding-bottom: 20px;
 }
 
@@ -40,23 +50,11 @@ footer a {
 }
 
 /* ====================
-    Typography
+    Layout
 ==================== */
-h2 {
-    margin-bottom: 8px;
-}
-
-/* ====================
-    Layout - Banner
-==================== */
-#header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-    margin: 0px;
-    padding-left: 10%;
-    background-color: var(--background);
+.profile-img {
+    width: 100px;
+    vertical-align: middle;
 }
 
 .banner {
@@ -65,6 +63,7 @@ h2 {
 
 .banner-nav {
     text-align: right;
+    margin-right: 3%;
 }
 
 .banner-nav a {
@@ -74,24 +73,10 @@ h2 {
     border-radius: 7px;
 }
 
-.profile-img {
-    width: 100px;
-    vertical-align: middle;
-}
 
 /* ====================
     Layout - Body
 ==================== */
-.main-wrapper {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-#welcome {
-    margin: 20px auto;
-    text-align: center;
-}
-
 .container {
     margin: 10px auto;
     padding: 5px 20px;
@@ -100,9 +85,14 @@ h2 {
     border-radius: 5px;
 }
 
-blockquote .quote {
-    font-style: italic;
+blockquote p::before {
+    content: "\201C";
 }
+
+blockquote p::after {
+    content: "\201D";
+}
+
 
 /* ====================
     Components
@@ -126,7 +116,7 @@ a:visited {
     Utilities
 ==================== */
 .bold {
-    font-size: 1.2em;
+    font-size: 1.1rem;
     font-weight: bold;
 }
 
